iptables-rules-2025-07-27.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Jul 27 17:04:50 2025
# WARNING!!! Edit/Change IP Tables ONLY IF YOU KNOW WHAT YOU ARE DOING!!!
# You can omit the subnet 10.10.10.0/24 if you don't need it. I route local traffic (lan only) through this interface
# Obviously 192.168.0.0/24 is from the DHCP server
# These rules allow ICMP, RDP, SSH, Samba, and Rcon on the subnet 10.10.10.0/24 only. Be careful! If you need something else you will
# need to customize this.

*filter
:INPUT DROP [354:58350]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1820210:5065346583]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.0.0/24 -j ACCEPT
-A INPUT -s 10.10.10.0/24 -j ACCEPT
-A INPUT -s 10.10.10.0/24 -p tcp -m tcp --dport 3389 -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p tcp -m multiport --dports 137,138,139,445 -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p udp -m multiport --dports 137,138 -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p tcp -m tcp --dport 25565 -j ACCEPT
-A INPUT -s 10.10.10.0/24 -p tcp -m tcp --dport 25565 -j ACCEPT
-A INPUT -s your.friends.ip.address/32 -p tcp -m tcp --dport 25565 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25565 -j LOG --log-prefix "MC-DROP: "
-A INPUT ! -s 10.10.10.0/24 -m conntrack --ctstate NEW -j LOG --log-prefix "EXTDROP: "
-A INPUT -s 192.168.0.0/24 -p udp -m udp --dport 25565 -j ACCEPT
-A INPUT -s 10.10.10.0/24 -p udp -m udp --dport 25565 -j ACCEPT
-A INPUT -s your.friends.ip.address/32 -p udp -m udp --dport 25565 -j ACCEPT
-A INPUT -p udp -m udp --dport 25565 -j DROP
-A INPUT -p tcp -m tcp --dport 25565 -j DROP
COMMIT
# Completed on Sun Jul 27 17:04:50 2025
